style: Fix problem with double scroll bar

--- a/styles/components/Track.module.scss
+++ b/styles/components/Track.module.scss
@@ -1,11 +1,11 @@
 .container {
-  margin: 6px;
+  margin-right: auto;
+  margin-left: auto;
   display: flex;
   height: 108px;
   border-radius: 24px;
   box-shadow: 0 0 5px #999;
   padding: 18px;
-  display: flex;
   width: 700px;
   background: #111;
   border: 1px solid #444444;
